re PR middle-end/90982 (ICE in make_decl_rtl, at varasm.c:1344)

2019-06-26  Richard Biener  <rguenther@suse.de>

	PR ipa/90982
	* tree-inline.c (remap_ssa_name): Copy SSA range info.

	* g++.dg/torture/pr90982.C: New testcase.

From-SVN: r272688